--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require": {
     "php": ">=5.3.9",
     "doctrine/doctrine-bundle": "~1.6",
-    "symfony/framework-bundle": "~2.3 | ~3.0"
+    "symfony/framework-bundle": "~2.3 | ~3.0",
+    "symfony/console": "~2.3|~3.0"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "~2.7|~3.0",
