--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "php": ">=5.3.9",
     "doctrine/doctrine-bundle": "~1.6",
     "symfony/framework-bundle": "~2.3 | ~3.0",
-    "symfony/console": "~2.3|~3.0"
+    "symfony/console": "~2.3|~3.0",
+    "jupeter/doctrine-dump-fixtures-bundle": "dev-master"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "~2.7|~3.0",
