--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "jupeter/doctrine-dump-fixtures-bundle": "dev-master"
   },
   "require-dev": {
+    "doctrine/orm": "~2.3",
     "symfony/phpunit-bridge": "~2.7|~3.0",
     "satooshi/php-coveralls": "~0.6.1",
     "phpunit/phpunit": "~4"
