--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,6 @@ php:
 matrix:
   fast_finish: true
   include:
-    - php: 5.3
-      env: COMPOSER_FLAGS="--prefer-lowest"
     - php: 5.6
       env: SYMFONY_VERSION=2.3.*
     - php: 5.6
@@ -34,7 +32,8 @@ before_install:
   - composer selfupdate
   - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
 
-install: composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
+install:
+  - composer install
 
 script:
   - phpunit --coverage-text
