--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,12 @@
   "require": {
     "php": ">=5.3.9",
     "doctrine/doctrine-bundle": "~1.6",
-    "symfony/framework-bundle": "~2.3 | ~3.0",
+    "symfony/framework-bundle": "~2.3|~3.0",
     "symfony/console": "~2.3|~3.0",
     "jupeter/doctrine-dump-fixtures-bundle": "dev-master"
   },
   "require-dev": {
+    "doctrine/doctrine-cache-bundle": "~1.0",
     "doctrine/orm": "~2.3",
     "symfony/phpunit-bridge": "~2.7|~3.0",
     "satooshi/php-coveralls": "~0.6.1",
