--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ php:
 matrix:
   fast_finish: true
   include:
+    - php: 5.3
+      env: SYMFONY_VERSION=2.3.*
+    - php: 5.4
+      env: SYMFONY_VERSION=2.3.*
     - php: 5.6
       env: SYMFONY_VERSION=2.3.*
     - php: 5.6
