composer type changed to symfony-bundle

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "skillberto/consoleextend-bundle",
-  "type": "skillberto-bundle",
+  "type": "symfony-bundle",
   "description": "ConsoleExtendBundle for the Symfony Framework",
   "keywords": [],
   "license": "MIT",
