--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,15 @@
     "php": ">=5.5",
     "doctrine/doctrine-bundle": "~1.6",
     "symfony/framework-bundle": "~2.3",
-    "symfony/console": "~2.3",
-    "jupeter/doctrine-dump-fixtures-bundle": "dev-master"
+    "symfony/console": "~2.3"
   },
   "require-dev": {
     "doctrine/orm": "~2.3",
     "satooshi/php-coveralls": "~0.6.1",
     "phpunit/phpunit": "~4"
+  },
+  "suggest": {
+    "jupeter/doctrine-dump-fixtures-bundle": "Allows dump command from DB."
   },
   "autoload": {
     "psr-4": { "Skillberto\\ConsoleExtendBundle\\": "" }
