--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
   - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
 
 install:
-  - php -d memory_limit=-1 /home/travis/.phpenv/versions/${TRAVIS_PHP_VERSION}/bin/composer install
+  - composer install
 
 script:
   - phpunit --coverage-text --colors
