--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "php": ">=5.4",
         "doctrine/doctrine-bundle": "~1.6",
         "symfony/framework-bundle": "~2.3|~3.0",
-        "symfony/console": "~2.3|~3.0",
-        "jupeter/doctrine-dump-fixtures-bundle": "0.1.x-dev"
+        "symfony/console": "~2.3|~3.0"
     },
     "require-dev": {
         "doctrine/orm": "~2.3",
