--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.4
   - 5.5
   - 5.6
   - 7.0
@@ -10,6 +9,8 @@ php:
 matrix:
   fast_finish: true
   include:
+    - php: 5.4
+      env: SYMFONY_VERSION=2.3.*
     - php: 5.6
       env: SYMFONY_VERSION=2.3.*
     - php: 5.6
