--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,9 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
         "doctrine/doctrine-bundle": "~1.6",
-        "symfony/framework-bundle": "~2.3|~3.0",
-        "symfony/console": "~2.3|~3.0"
+        "symfony/framework-bundle": "~2.3",
+        "symfony/console": "~2.3"
     },
     "require-dev": {
         "doctrine/orm": "~2.3",
