--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         }
     ],
     "require": {
-        "doctrine/doctrine-bundle": "~1.6",
-        "symfony/framework-bundle": "~2.3",
-        "symfony/console": "~2.3"
+        "symfony/framework-bundle": "~2.3|~3.0",
+        "symfony/console": "~2.3|~3.0",
+        "doctrine/doctrine-bundle": "~1.6"
     },
     "require-dev": {
         "doctrine/orm": "~2.3",
